Exchange Calendar Adapter using impersonation activated by default. A master username and master password (which are used to log in to the exchange server) need to be set in the portlet.xml preferences. All users use these master values and their uportal username is the value used for impersonation. A bugfix for caching of calendar events; Etags are now part of the ajax request url.